feat: implementar correções críticas de produção
- Adicionar CORS middleware com configuração via variáveis de ambiente
- Implementar rate limiting com slowapi (limites por endpoint)
- Adicionar validações de upload (tamanho, tipo, streaming)
- Implementar tratamento de erros robusto com exception handlers globais
- Adicionar sistema completo de backup e recuperação
- Organizar documentação em DOC/ (análises e relatórios)
- Atualizar requirements.txt com novas dependências
- Adicionar scripts de backup manual e agendado
- Melhorar segurança e logging estruturado

--- a/.gitignore
+++ b/.gitignore
@@ -75,6 +75,8 @@ __pycache__/
 .pythonlibs/
 .upm/
 uv.lock
+.config/
+.local/
 
 # Python UV package manager
 .venv/
@@ -88,3 +90,8 @@ uploads/
 *.db
 plans.db
 test.db
+
+# Backups (manter estrutura mas não os arquivos)
+backend/backups/*.db
+backups/*.db
+!backend/backups/.gitkeep
